--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,13 @@
   font-weight: bold;
   font-size: 20px;
 }
+
+.label {
+  font-weight: bold;
+}
+
+.input {
+  width: 80px;
+  border-radius: 20px;
+  padding: 10px;
+}
